edit the timeline templates

--- a/index.html
+++ b/index.html
@@ -199,6 +199,8 @@
         </div>
       </div>
 
+      <br><br><br><br>
+
       <h3> Skills: </h3>
       <br>
 
@@ -255,13 +257,12 @@
 
     </div>
   </section>
-
+  <br>
 
   <section id="resume">
     <div class="resume_content">
 
-      <h3> Resume </h3>
-      <br><br><br>
+      <h3> Resume </h3> <br>
       &#128679; Under Development! &#128296;
       <br><br><br>
 
@@ -270,49 +271,57 @@
           <ul>
             <li id="item1">
               <div class="timeline-content">
-                <h3 class="date">20th may, 2010</h3>
-                <h1>Heading 1</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur tempora ab laudantium
+                <h3 class="date">3th Mar, 1998</h3>
+                <h1>The Beginning</h1>
+                <p>Istanbul, Eminonu. Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur tempora ab laudantium
                   voluptatibus aut eos placeat laborum, quibusdam exercitationem labore.</p>
               </div>
             </li>
             <li id="item2">
               <div class="timeline-content">
-                <h3 class="date">20th may, 2010</h3>
-                <h1>Heading 2</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur tempora ab laudantium
+                <h3 class="date">1th Jan, 2012</h3>
+                <h1>Kuleli Military High School</h1>
+                <p>... Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur tempora ab laudantium
                   voluptatibus aut eos placeat laborum, quibusdam exercitationem labore.</p>
               </div>
             </li>
             <li id="item3">
               <div class="timeline-content">
-                <h3 class="date">20th may, 2010</h3>
-                <h1>Heading 3</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur tempora ab laudantium
+                <h3 class="date">1th Sep, 2017</h3>
+                <h1>Welcome to USA!</h1>
+                <p>Hello! Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur tempora ab laudantium
                   voluptatibus aut eos placeat laborum, quibusdam exercitationem labore.</p>
               </div>
             </li>
             <li id="item4">
               <div class="timeline-content">
-                <h3 class="date">20th may, 2010</h3>
-                <h1>Heading 4</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur tempora ab laudantium
+                <h3 class="date">1th May, 2018</h3>
+                <h1>Community College & Work</h1>
+                <p>Keep working while studying. Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur tempora ab laudantium
                   voluptatibus aut eos placeat laborum, quibusdam exercitationem labore.</p>
               </div>
             </li>
             <li id="item5">
               <div class="timeline-content">
-                <h3 class="date">20th may, 2010</h3>
-                <h1>Heading 3</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur tempora ab laudantium
+                <h3 class="date">1th May, 2019</h3>
+                <h1>The University of Texas at Austin</h1>
+                <p>Computer Science & Psychology. Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur tempora ab laudantium
                   voluptatibus aut eos placeat laborum, quibusdam exercitationem labore.</p>
               </div>
             </li>
             <li id="item6">
               <div class="timeline-content">
-                <h3 class="date">20th may, 2010</h3>
-                <h1>Heading 4</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur tempora ab laudantium
+                <h3 class="date">10th Sep, 2020 - 2021</h3>
+                <h1>Internships</h1>
+                <p>Rais Games LTD & Infosys. Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur tempora ab laudantium
+                  voluptatibus aut eos placeat laborum, quibusdam exercitationem labore.</p>
+              </div>
+            </li>
+            <li id="item7">
+              <div class="timeline-content">
+                <h3 class="date">1th Jan, 2022</h3>
+                <h1>American Airlines</h1>
+                <p>Software Developer. Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur tempora ab laudantium
                   voluptatibus aut eos placeat laborum, quibusdam exercitationem labore.</p>
               </div>
             </li>
