--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 
 <head>
-  <title> Zenginerler Personal Website </title>
+  <title> Mehmet Yavuz Zenginerler Personal Website </title>
   <meta charset="UTF-8">
-  <meta name="description" content="Zenginerler Personal Website">
+  <meta name="description" content="Mehmet Yavuz Zenginerler Personal Website">
   <meta name="author" content="Mehmet Yavuz Zenginerler">
   <link rel="icon" href="./data/tempLogo.jpg">
   <link href="./css/index.css" rel="stylesheet">
@@ -54,7 +54,7 @@
         </li>
         <li class="social-item">
           <a href="mailto:myz@utexas.edu" class="social-icon"><i class="fas fa-envelope"></i></a>
-        </li>    
+        </li>
         <li class="social-item">
           <a href="https://www.linkedin.com/in/zenginerler" class="social-icon"><i class="fab fa-linkedin"></i></a>
         </li>
@@ -261,7 +261,8 @@
               <div class="timeline-content">
                 <h3 class="date">3th Mar, 1998</h3>
                 <h1>The Beginning</h1>
-                <p>Istanbul, Eminonu. Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur tempora ab laudantium
+                <p>Istanbul, Eminonu. Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur tempora ab
+                  laudantium
                   voluptatibus aut eos placeat laborum, quibusdam exercitationem labore.</p>
               </div>
             </li>
@@ -285,7 +286,8 @@
               <div class="timeline-content">
                 <h3 class="date">1th May, 2018</h3>
                 <h1>Community College & Work</h1>
-                <p>Keep working while studying. Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur tempora ab laudantium
+                <p>Keep working while studying. Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur
+                  tempora ab laudantium
                   voluptatibus aut eos placeat laborum, quibusdam exercitationem labore.</p>
               </div>
             </li>
@@ -293,7 +295,8 @@
               <div class="timeline-content">
                 <h3 class="date">1th May, 2019</h3>
                 <h1>The University of Texas at Austin</h1>
-                <p>Computer Science & Psychology. Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur tempora ab laudantium
+                <p>Computer Science & Psychology. Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur
+                  tempora ab laudantium
                   voluptatibus aut eos placeat laborum, quibusdam exercitationem labore.</p>
               </div>
             </li>
@@ -301,7 +304,8 @@
               <div class="timeline-content">
                 <h3 class="date">10th Sep, 2020 - 2021</h3>
                 <h1>Internships</h1>
-                <p>Rais Games LTD & Infosys. Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur tempora ab laudantium
+                <p>Rais Games LTD & Infosys. Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur
+                  tempora ab laudantium
                   voluptatibus aut eos placeat laborum, quibusdam exercitationem labore.</p>
               </div>
             </li>
@@ -309,7 +313,8 @@
               <div class="timeline-content">
                 <h3 class="date">1th Jan, 2022</h3>
                 <h1>American Airlines</h1>
-                <p>Software Developer. Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur tempora ab laudantium
+                <p>Software Developer. Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur tempora ab
+                  laudantium
                   voluptatibus aut eos placeat laborum, quibusdam exercitationem labore.</p>
               </div>
             </li>
@@ -334,6 +339,14 @@
     </div>
   </footer>
 
+  <div class="go-top-button">
+    <a title="Back to Top" href="#welcome">
+      <i class="fas fa-arrow-up" aria-hidden="true"></i>
+    </a>
+  </div>
+
+  <!-- Java Script
+  ================================================== -->
   <script src="./js/index.js"> </script>
 
 </body>
