--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
 </head>
 
 <body>
+  <!-- Header/Navigation
+  ================================================== -->
   <header>
     <div class="banner" id="bannerScroll">
 
@@ -29,13 +31,15 @@
           <li><a class="heading" href="#aboutMe">About</a></li>
           <li><a class="heading" href="#projects">Projects</a></li>
           <li><a class="heading" href="#resume">Timeline</a></li>
-          <li><a class="heading" href="#">Contact</a></li>
+          <li><a class="heading" href="#" title="Incomplete!">Contact</a></li>
         </ul>
       </div>
 
     </div>
   </header>
 
+  <!-- Welcome Content
+  ================================================== -->
   <section id="welcome">
     <div class="welcome_content">
 
@@ -63,7 +67,8 @@
     </div>
   </section>
 
-
+  <!-- About Me
+  ================================================== -->
   <section id="aboutMe">
     <div class="aboutMe_content">
       <img class="profile_pic" id="profile_pic1" src="./data/profile_pic.jpg" alt="Profile Image">
@@ -92,7 +97,8 @@
     </div>
   </section>
 
-
+  <!-- Projects
+  ================================================== -->
   <section id="projects">
     <div class="projects_content">
 
@@ -189,6 +195,8 @@
 
       <br><br><br><br>
 
+      <!-- Skills
+      ================================================== -->
       <h3> Skills: </h3>
       <br>
 
@@ -247,6 +255,8 @@
   </section>
   <br>
 
+  <!-- Timeline/Resume
+  ================================================== -->
   <section id="resume">
     <div class="resume_content">
 
@@ -329,6 +339,8 @@
     </div>
   </section>
 
+  <!-- Footer
+  ================================================== -->
   <footer>
     <div>
       Mehmet Yavuz Zenginerler &copy; &emsp;
@@ -337,13 +349,13 @@
       &emsp; &bull; Page Last Updated:
       <script> document.write(document.lastModified);</script>
     </div>
-  </footer>
 
-  <div class="go-top-button">
-    <a title="Back to Top" href="#welcome">
-      <i class="fas fa-arrow-up" aria-hidden="true"></i>
-    </a>
-  </div>
+    <div class="go-top-button">
+      <a title="Back to Top" href="#welcome">
+        <i class="fas fa-arrow-up" aria-hidden="true"></i>
+      </a>
+    </div>
+  </footer>
 
   <!-- Java Script
   ================================================== -->
