add glicth effect to the title

--- a/index.html
+++ b/index.html
@@ -43,14 +43,19 @@
   <section id="welcome">
     <div class="welcome_content">
 
-      <h1 id="welcome_title"> Mehmet Yavuz Zenginerler </h1>
+      <div class="gliched_container">
+        <div class="glich_stack" style="--stacks: 3;">
+          <span style="--index: 0;">Mehmet Yavuz Zenginerler</span>
+          <span style="--index: 1;">Mehmet Yavuz Zenginerler</span>
+          <span style="--index: 2;">Mehmet Yavuz Zenginerler</span>
+        </div>
+      </div>
 
       <h2 id="welcome_message">
         Hi there! &#x1F44B; I am a <b>software engineer</b> at American Airlines.
         If I'm not at work, I'm probably working on my own projects.
         If you want to learn more about me, keep scrolling!
       </h2>
-      <!-- &#128296; draft &#128679; -->
 
       <ul class="socials-list">
         <li class="social-item">
