--- a/index.html
+++ b/index.html
@@ -78,14 +78,14 @@
     <div class="aboutMe_content">
       <img class="profile_pic" id="profile_pic1" src="./data/profile_pic.jpg" alt="Profile Image">
       <div id="aboutMe_content_text">
-        <h3> About Me: </h3>
+        <h3>About Me</h3>
         <br>
         <img class="profile_pic" id="profile_pic2" src="./data/profile_pic.jpg" alt="Profile Image" hidden>
         <br>
         <p>
           I am a Software Engineer who likes to solve computational problems in a reliable and secure way, who also
           finds rejoice in simplifying and organizing the complexity. If we exclude my profession, I am an interesting
-          individual who enjoys mountain biking &#128690;, charcoal drawing &#9997;, and table tennis &#127955;.
+          individual who enjoys mountain biking &#128690;, charcoal drawing &#9997;, and table tennis &#127955;
         </p>
         <br>
         <hr>
@@ -102,12 +102,14 @@
     </div>
   </section>
 
+  <div class="curvy_spacer curve_1"></div>
+
   <!-- Projects
   ================================================== -->
   <section id="projects">
     <div class="projects_content">
 
-      <h3> My Projects: </h3>
+      <h3>My Projects</h3>
       <br>
       <div class="project_cards_grid">
         <div class="card">
@@ -202,7 +204,7 @@
 
       <!-- Skills
       ================================================== -->
-      <h3> Skills: </h3>
+      <h3>Skills</h3>
       <br>
 
       <div class="skills_wrapper">
@@ -258,7 +260,8 @@
 
     </div>
   </section>
-  <br>
+
+  <div class="curvy_spacer curve_2"></div>
 
   <!-- Timeline/Resume
   ================================================== -->
