--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <li><a class="heading" href="#welcome">Home</a></li>
           <li><a class="heading" href="#aboutMe">About</a></li>
           <li><a class="heading" href="#projects">Projects</a></li>
-          <li><a class="heading" href="#resume">Timeline</a></li>
+          <li><a class="heading" href="#mystory">Timeline</a></li>
           <li><a class="heading" href="#" title="Incomplete!">Contact</a></li>
         </ul>
       </div>
@@ -88,14 +88,9 @@
           individual who enjoys mountain biking &#128690;, charcoal drawing &#9997;, and table tennis &#127955;
         </p>
         <br>
-        <hr>
-        <br>
+        <hr><br>
         <p>
-          &#128679; Under Development! &#128296;
-          I am a Software Engineer who likes to solve computational problems in a reliable and secure way, who also
-          finds rejoice in simplifying and organizing the complexity. If we exclude my profession, I am an interesting
-          individual who enjoys mountain biking, charcoal drawing, and table tennis. &#128679; Under Development!
-          &#128296;
+          &#128679; This website is still under development, but feel free to roam around! &#128296;
         </p>
       </div>
 
@@ -263,12 +258,12 @@
 
   <div class="curvy_spacer curve_2"></div>
 
-  <!-- Timeline/Resume
+  <!-- Timeline/My Story
   ================================================== -->
-  <section id="resume">
-    <div class="resume_content">
+  <section id="mystory">
+    <div class="mystory_content">
 
-      <h3> Resume </h3> <br>
+      <h3> My Story </h3> <br>
       &#128679; Under Development! &#128296;
       <br><br><br>
 
@@ -279,34 +274,32 @@
               <div class="timeline-content">
                 <h3 class="date">3th Mar, 1998</h3>
                 <h1>The Beginning</h1>
-                <p>Istanbul, Eminonu. Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur tempora ab
-                  laudantium
-                  voluptatibus aut eos placeat laborum, quibusdam exercitationem labore.</p>
+                <p>I have born in Istanbul, Turkey, and lived in many different cities. Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur tempora ab laudantium
+                  voluptatibus aut eos laborum. </p>
               </div>
             </li>
             <li id="item2">
               <div class="timeline-content">
                 <h3 class="date">1th Jan, 2012</h3>
                 <h1>Kuleli Military High School</h1>
-                <p>... Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur tempora ab laudantium
-                  voluptatibus aut eos placeat laborum, quibusdam exercitationem labore.</p>
+                <p>Kuleli... Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur tempora ab laudantium
+                  voluptatibus aut eos placeat laborum, quibusdam exercitationem labore. </p>
               </div>
             </li>
             <li id="item3">
               <div class="timeline-content">
                 <h3 class="date">1th Sep, 2017</h3>
                 <h1>Welcome to USA!</h1>
-                <p>Hello! Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur tempora ab laudantium
-                  voluptatibus aut eos placeat laborum, quibusdam exercitationem labore.</p>
+                <p>Hello World!.. Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur tempora ab
+                  laudantium voluptatibus aut eos placeat laborum, quibusdam exercitationem kekome.</p>
               </div>
             </li>
             <li id="item4">
               <div class="timeline-content">
                 <h3 class="date">1th May, 2018</h3>
                 <h1>Community College & Work</h1>
-                <p>Keep working while studying. Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur
-                  tempora ab laudantium
-                  voluptatibus aut eos placeat laborum, quibusdam exercitationem labore.</p>
+                <p>Working while studying... Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur
+                  tempora ab laudantium voluptatibus aut eos placeat laborum, quibusdam exercitationem labore.</p>
               </div>
             </li>
             <li id="item5">
@@ -314,8 +307,7 @@
                 <h3 class="date">1th May, 2019</h3>
                 <h1>The University of Texas at Austin</h1>
                 <p>Computer Science & Psychology. Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur
-                  tempora ab laudantium
-                  voluptatibus aut eos placeat laborum, quibusdam exercitationem labore.</p>
+                  tempora ab laudantium voluptatibus aut eos placeat laborum, quibusdam exercitationem labore.</p>
               </div>
             </li>
             <li id="item6">
@@ -323,8 +315,7 @@
                 <h3 class="date">10th Sep, 2020 - 2021</h3>
                 <h1>Internships</h1>
                 <p>Rais Games LTD & Infosys. Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur
-                  tempora ab laudantium
-                  voluptatibus aut eos placeat laborum, quibusdam exercitationem labore.</p>
+                  tempora ab laudantium voluptatibus aut eos placeat laborum, quibusdam exercitationem labore.</p>
               </div>
             </li>
             <li id="item7">
@@ -332,8 +323,7 @@
                 <h3 class="date">1th Jan, 2022</h3>
                 <h1>American Airlines</h1>
                 <p>Software Developer. Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur tempora ab
-                  laudantium
-                  voluptatibus aut eos placeat laborum, quibusdam exercitationem labore.</p>
+                  laudantium voluptatibus aut eos placeat laborum, quibusdam exercitationem labore.</p>
               </div>
             </li>
           </ul>
