lazy update -IBM

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       </div>
 
       <h2 id="welcome_message">
-        Hi there! &#x1F44B; I am a <b>software engineer</b> at American Airlines.
+        Hi there! &#x1F44B; I am a <b>software engineer</b> at IBM.
         If I'm not at work, I'm probably working on my own projects.
         If you want to learn more about me, keep scrolling!
       </h2>
@@ -323,6 +323,14 @@
                 <h3 class="date">1th Jan, 2022</h3>
                 <h1>American Airlines</h1>
                 <p>Software Developer. Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur tempora ab
+                  laudantium voluptatibus aut eos placeat laborum, quibusdam exercitationem labore.</p>
+              </div>
+            </li>
+            <li id="item8">
+              <div class="timeline-content">
+                <h3 class="date">1th Sep, 2022</h3>
+                <h1>IBM</h1>
+                <p>Software Engineer at IBM Cloud. Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur tempora ab
                   laudantium voluptatibus aut eos placeat laborum, quibusdam exercitationem labore.</p>
               </div>
             </li>
