--- a/index.html
+++ b/index.html
@@ -88,9 +88,6 @@
           individual who enjoys mountain biking &#128690;, charcoal drawing &#9997;, and table tennis &#127955;
         </p>
         <br><hr><br>
-        <p>
-          &#128679; This website is still under development, but feel free to roam around! &#128296;
-        </p>
       </div>
 
     </div>
@@ -110,45 +107,14 @@
         <div class="card">
           <div class="box background1">
             <div class="content">
-              <img
-                src="https://user-images.githubusercontent.com/64453575/104114903-18a35f80-52cf-11eb-8dcc-aa7d837dc569.gif">
-              <h3>Tiko</h3>
-            </div>
-          </div>
-          <div class="box background2">
-            <div class="content">
-              <p>2D platformer game that I developed using Unity and C#. Go to the repository to play a demo.</p><br>
-              <a href="https://github.com/zenginerler/Tiko">&#9989; Repository</a>
-            </div>
-          </div>
-        </div>
-
-        <div class="card">
-          <div class="box background1">
-            <div class="content">
               <img src="./data/icons/002-ui-design.png">
               <h3>Mentor</h3>
             </div>
           </div>
           <div class="box background2">
             <div class="content">
-              <p>Flutter Mobile Application Project for a non-profit organization.</p>
-              <a href="https://github.com/zenginerler/Mentor">&#9989; Repository</a>
-            </div>
-          </div>
-        </div>
-
-        <div class="card">
-          <div class="box background1">
-            <div class="content">
-              <img src="./data/icons/004-workflow.png">
-              <h3>Flowe</h3>
-            </div>
-          </div>
-          <div class="box background2">
-            <div class="content">
-              <p>IOS application that allows users to have better control over their project workflows.</p>
-              <a href="https://github.com/zenginerler/Flowe">&#9989; Repository</a>
+              <p>Mobile application created with react native for a non-profit organization. (Switched from Flutter/Dart)</p>
+              <a href="#projects">&#10060; Private</a>
             </div>
           </div>
         </div>
@@ -165,6 +131,36 @@
               <p>Completely functional web application that runs our custom image captioning models along with video
                 processing features.</p>
               <a href="#projects">&#10060; Private</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="box background1">
+            <div class="content">
+              <img src="./data/icons/007-bot.png">
+              <h3>Slack Bot</h3>
+            </div>
+          </div>
+          <div class="box background2">
+            <div class="content">
+              <p>A highly over-engineered Slack bot that enables our team to schedule test environments. It's pretty much like DHCP but for multiple Kubernetes clusters (imitating a data center).</p>
+              <a href="#projects">&#10060; Private</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="box background1">
+            <div class="content">
+              <img src="./data/icons/004-workflow.png">
+              <h3>Flowe</h3>
+            </div>
+          </div>
+          <div class="box background2">
+            <div class="content">
+              <p>IOS application that allows users to have better control over their project workflows.</p>
+              <a href="https://github.com/zenginerler/Flowe">&#9989; Repository</a>
             </div>
           </div>
         </div>
@@ -195,6 +191,22 @@
             <div class="content">
               <p>Always online Discord bot that I developed as an example Python project for my mentees.</p>
               <a href="https://github.com/zenginerler/DiscordBot">&#9989; Repository</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="box background1">
+            <div class="content">
+              <img
+                src="https://user-images.githubusercontent.com/64453575/104114903-18a35f80-52cf-11eb-8dcc-aa7d837dc569.gif">
+              <h3>Tiko</h3>
+            </div>
+          </div>
+          <div class="box background2">
+            <div class="content">
+              <p>2D platformer game that I developed using Unity and C#. Go to the repository to play a demo.</p><br>
+              <a href="https://github.com/zenginerler/Tiko">&#9989; Repository</a>
             </div>
           </div>
         </div>
@@ -326,7 +338,7 @@
               <div class="timeline-content">
                 <h3 class="date">2017</h3>
                 <h1>Welcome to USA!</h1>
-                <p>Yep, at the age of 19, just by myself, with a very limited amount of money, I decided to start a new
+                <p>Yep, at the age of 19, just by myself, with a very limited amount of funds, I decided to start a new
                   life on another continent with a different culture and language </p>
               </div>
             </li>
@@ -335,7 +347,7 @@
               <div class="timeline-content">
                 <h3 class="date">2018 - 2019</h3>
                 <h1>Community College & Work</h1>
-                <p>Starting a new life from scratch brought some additional responsibilities. I was working while
+                <p>Starting a new life from scratch brought some additional responsibilities. I was working part-time while
                   continuing my undergraduate studies in the language I started speaking a year ago </p>
               </div>
             </li>
@@ -344,7 +356,7 @@
               <div class="timeline-content">
                 <h3 class="date">2019 - 2021</h3>
                 <h1>The University of Texas at Austin</h1>
-                <p>Starting as a pre-med student and after suffering immense pain due to my professor's liberal arts way of doing things, 
+                <p>I started as a pre-med student and after suffering immense pain due to my professor's liberal arts way of doing things, 
                   I decided to take my first computer science class. I quickly realized that I belong to the world of 0's and 1's </p>
               </div>
             </li>
@@ -363,7 +375,7 @@
               <div class="timeline-content">
                 <h3 class="date">Jan 2022</h3>
                 <h1>American Airlines</h1>
-                <p>After getting multiple offers, I chose to start my professional career at American Airlines 
+                <p>After having multiple options, I chose to start my professional career at American Airlines 
                   since their Mobile App Team had great people! 
                   I contributed to the Loyalty & Booking squads as a Backend/DevOps engineer. </p>
               </div>
@@ -374,7 +386,7 @@
                 <h3 class="date">Sep 2022</h3>
                 <h1>IBM</h1>
                 <p>In an attempt to challenge myself a bit more, I joined the Big Blue. 
-                  I'm currently working on bootstrap automation for new data centers in the NextGen IBM Cloud Team </p>
+                  I'm currently working on bootstrap automation for new data centers in the IBM Cloud NextGen Team </p>
               </div>
             </li>
 
