MYZ | Update hobbies & add ansible as a new skill

--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
         <br>
         <p>
           I am a Software Engineer who likes to solve computational problems in a reliable and secure way, who also
-          finds rejoice in simplifying and organizing the complexity. If we exclude my profession, I am an interesting
-          individual who enjoys mountain biking &#128690;, charcoal drawing &#9997;, and table tennis &#127955;
+          finds rejoice in simplifying and organizing the complexity. If we exclude my profession, I am an unique
+          individual who enjoys reading 📖📚, mountain biking 🚲🏔️, and practicing Judo 🥋
         </p>
         <br><hr><br>
       </div>
@@ -113,7 +113,7 @@
           </div>
           <div class="box background2">
             <div class="content">
-              <p>Mobile application created with react native for a non-profit organization. (Switched from Flutter/Dart)</p>
+              <p>Mobile application created with React-Native & TS (previously Flutter/Dart) for a non-profit organization. I'm actively working on this project, and it's the biggest one so far</p>
               <a href="#projects">&#10060; Private</a>
             </div>
           </div>
@@ -139,16 +139,21 @@
           <div class="box background1">
             <div class="content">
               <img src="./data/icons/007-bot.png">
-              <h3>Slack Bot</h3>
+              <h3>DC Scheduler</h3>
             </div>
           </div>
           <div class="box background2">
             <div class="content">
-              <p>A highly over-engineered Slack bot that enables our team to schedule test environments. It's pretty much like DHCP but for multiple Kubernetes clusters (imitating a data center).</p>
+              <p>A highly over-engineered Slack bot that enables our devs to reserve test environments. It's pretty much like DHCP but for multiple Kubernetes clusters (imitating a data center).</p>
               <a href="#projects">&#10060; Private</a>
             </div>
           </div>
         </div>
+
+      </div>
+
+      <h4>Archived Projects</h3>
+      <div class="project_cards_grid">
 
         <div class="card">
           <div class="box background1">
@@ -290,6 +295,11 @@
         <div class="icon kubernetes">
           <div class="tooltip">Kubernetes</div>
           <span><i class="kubernetes-icon"></i></span>
+        </div>
+
+        <div class="icon ansible">
+          <div class="tooltip">Ansible</div>
+          <span><i class="fa-brands fa-redhat"></i></span>
         </div>
 
         <div class="icon database">
